--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.6",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "sqlite3": "^5.1.7"
